--- a/BlazorApp2/Pages/_Host.cshtml
+++ b/BlazorApp2/Pages/_Host.cshtml
@@ -29,8 +29,8 @@
         <div class="bg-light border-right" id="sidebar-wrapper">
             <div class="sidebar-heading">Start Bootstrap </div>
             <div class="list-group list-group-flush">
-                <a href="#" class="list-group-item list-group-item-action bg-light">Dashboard</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Shortcuts</a>
+                <a href="/" class="list-group-item list-group-item-action bg-light">Repositories</a>
+                <a href="/iterations" class="list-group-item list-group-item-action bg-light">Iterations</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
                 <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
