Get work item details.

--- a/BlazorApp2/Pages/Iterations.razor
+++ b/BlazorApp2/Pages/Iterations.razor
@@ -46,6 +46,6 @@
 
     void FormSubmitted()
     {
-        NavigationManager.NavigateTo($"/workitems/{IterationModel.Id}", true);
+        NavigationManager.NavigateTo($"/workitemdetails/{IterationModel.Id}", true);
     }
 }
