--- a/BlazorApp2/Pages/_Host.cshtml
+++ b/BlazorApp2/Pages/_Host.cshtml
@@ -11,109 +11,100 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
 
-    <title>Blazor Azure Web Api</title>
+    <title>Blazor Azure Web API</title>
     <base href="~/" />
 
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/simple-sidebar.css" rel="stylesheet">
-    <link href="css/prism.css" rel="stylesheet" />
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <style>
+        :root {
+            /*   color variables */
+            --clr-primary: #6aeeb5;
+            --clr-primary-hover: #29e6a7;
+            --clr-primary-dark: #039d69;
+            --clr-gray100: #f0f7f8;
+            --clr-gray200: #cfd8dc;
+            /*   border radius */
+            --radius: 0.2rem;
+        }
+
+        *,
+        *:before,
+        *:after {
+            box-sizing: border-box;
+        }
+
+        /*body {
+            font-family: Montserrat, sans-serif;
+            background: var(--clr-gray100);
+        }*/
+
+        .nav-list {
+            /*background: white;*/
+            box-shadow: 0px 0px 10px var(--clr-gray200);
+            padding: 0.75rem 0;
+            border-radius: var(--radius);
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .nav-item {
+            list-style: none;
+            margin-right: 1rem;
+        }
+
+            .nav-item a {
+                text-decoration: none;
+                /*color: black;*/
+                transition: all 200ms ease-in;
+            }
+
+        /*.nav-item a:hover {
+            color: var(--clr-primary-dark);
+        }*/
+
+        /*.nav-item:first-child {
+            margin-right: auto;
+            margin-left: 1rem;
+        }*/
+
+        /*.btn-primary {
+            font-family: Montserrat, sans-serif;
+            font-size: 1rem;
+            background: var(--clr-primary);
+            border: none;
+            outline: none;
+            border-radius: var(--radius);
+            padding: 0.5rem 1rem;
+            cursor: pointer;
+            transition: all 200ms ease-in;
+        }
+
+        .btn-primary:hover {
+            background: var(--clr-primary-hover);
+        }*/
+
+    </style>
 </head>
 
-<body>
-    <div class="d-flex" id="wrapper">
-
-        <!-- Sidebar -->
-        <div class="bg-light border-right" id="sidebar-wrapper">
-            <div class="sidebar-heading">Start Bootstrap </div>
-            <div class="list-group list-group-flush">
-                <a href="/" class="list-group-item list-group-item-action bg-light">Repositories</a>
-                <a href="/iterations" class="list-group-item list-group-item-action bg-light">Iterations</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Overview</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Events</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Profile</a>
-                <a href="#" class="list-group-item list-group-item-action bg-light">Status</a>
-            </div>
+<body class="m-2 bg-light">
+    <main>
+        <div class="container-fluid">
+            <component type="typeof(App)" render-mode="Server" />
         </div>
-
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-
-            <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
-                <button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
-
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                Dropdown
-                            </a>
-                            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <div class="dropdown-divider"></div>
-                                <a class="dropdown-item" href="#">Something else here</a>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-
-            <div class="container-fluid">
-                <component type="typeof(App)" render-mode="Server" />
-            </div>
-        </div>
-    </div>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Menu Toggle Script -->
-    <script>
-        $("#menu-toggle").click(function (e) {
-            e.preventDefault();
-            $("#wrapper").toggleClass("toggled");
-        });
-    </script>
-    <script src="js/prism.js" data-manual></script>
-    <script>
-        window.addEventListener('load', (event) => {
-            console.log('DOM fully loaded and parsed');
-            console.log(document.readyState);
-
-            //let html = document.getElementsByTagName('code')[0];
-            //console.log(html);
-
-            //let query = document.querySelector('code');
-            //console.log(query);
-        });
-    </script>
+    </main>
 
     <script>
         function SetContent(value) {
-            //const query = document.querySelector('code');
-            //query.innerText = h.value;
-            //console.log(query.innerText);
-
-            //const p = Prism.highlight(value, Prism.languages.csharp, 'csharp');
-            //console.log(p);
-
-            //query.innerText = p;
+            document.getElementById("code").value = value;
         }
+
     </script>
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
 
     <script src="_framework/blazor.server.js"></script>
 </body>
