--- a/BlazorApp2/Pages/_Host.cshtml
+++ b/BlazorApp2/Pages/_Host.cshtml
@@ -17,76 +17,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-    <style>
-        :root {
-            /*   color variables */
-            --clr-primary: #6aeeb5;
-            --clr-primary-hover: #29e6a7;
-            --clr-primary-dark: #039d69;
-            --clr-gray100: #f0f7f8;
-            --clr-gray200: #cfd8dc;
-            /*   border radius */
-            --radius: 0.2rem;
-        }
-
-        *,
-        *:before,
-        *:after {
-            box-sizing: border-box;
-        }
-
-        /*body {
-            font-family: Montserrat, sans-serif;
-            background: var(--clr-gray100);
-        }*/
-
-        .nav-list {
-            /*background: white;*/
-            box-shadow: 0px 0px 10px var(--clr-gray200);
-            padding: 0.75rem 0;
-            border-radius: var(--radius);
-            display: flex;
-            justify-content: flex-end;
-            align-items: center;
-        }
-
-        .nav-item {
-            list-style: none;
-            margin-right: 1rem;
-        }
-
-            .nav-item a {
-                text-decoration: none;
-                /*color: black;*/
-                transition: all 200ms ease-in;
-            }
-
-        /*.nav-item a:hover {
-            color: var(--clr-primary-dark);
-        }*/
-
-        /*.nav-item:first-child {
-            margin-right: auto;
-            margin-left: 1rem;
-        }*/
-
-        /*.btn-primary {
-            font-family: Montserrat, sans-serif;
-            font-size: 1rem;
-            background: var(--clr-primary);
-            border: none;
-            outline: none;
-            border-radius: var(--radius);
-            padding: 0.5rem 1rem;
-            cursor: pointer;
-            transition: all 200ms ease-in;
-        }
-
-        .btn-primary:hover {
-            background: var(--clr-primary-hover);
-        }*/
-
-    </style>
+    <link href="css/application.css" rel="stylesheet" />
 </head>
 
 <body class="m-2 bg-light">
@@ -100,7 +31,6 @@
         function SetContent(value) {
             document.getElementById("code").value = value;
         }
-
     </script>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
